--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     </string>
     <string name="title_activity_register">Register</string>
     <string name="action_sign_in_short">Sign in</string>
+    <string name="title_activity_request">RequestActivity</string>
 </resources>
